--- a/src/globals.css
+++ b/src/globals.css
@@ -426,11 +426,7 @@ html {
   .main {
     height: 100vh !important;
     backdrop-filter: blur(5px);
-    background-image: linear-gradient(
-        rgba(47, 47, 47, 0.6),
-        rgba(58, 57, 57, 0.6)
-      ),
-      url("https://gaaga.wpengine.com/wp-content/uploads/2023/06/Gaaga-Slider-1-Image-1-2048x1796.jpg");
+    background-image: url("./assets/images/image.png");
     background-position: center 50%;
     background-size: contain;
     background-repeat: no-repeat;
